Align menu correctly.

--- a/app/asset-pipeline/scss/app_layout.scss
+++ b/app/asset-pipeline/scss/app_layout.scss
@@ -86,14 +86,6 @@ body {
                     }
                 }
             }
-            > .profile {
-                width: 240px;
-                position: absolute;
-                bottom: 0;
-                display: flex;
-                justify-content: center;
-                padding: 1rem;
-            }
         }
     
         // If the hamburger gets toggles show the menu.
